--- a/Windspeed.html
+++ b/Windspeed.html
@@ -49,17 +49,10 @@
         <div class="col-md-7">
           <div class="col-md-12">
             <div class="box">
-          <h2>Summary: Latitude vs. X</h2>
+          <h2>Wind Speed</h2>
           <hr>
-          <img src="Resources/assets/Fig1.png" alt="Latitude vs. Temperature" width=100% align="left" >
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
-            accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
-            cities.
-          </p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors
-            we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the souce data
-            and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and
-            correlations witnesseed.
+          <img src="Resources/assets/Fig4.png" width=100% alt="Latitude vs. Wind Speed" >
+          <p> Wind Speed seems to have no correaltion at all with latitude. Wind speed for most of the cities are at low to medium level across all latitudes
           </p>
           <hr>
         </div>
@@ -79,14 +72,14 @@
               <a href="Temperature.html"><img src="Resources/assets/Fig1.png"  width=100% alt="Latitude vs. Temperature"></a>
             </div>
             <div class="col-lg-6 col-md-3">
-              <a href="Humidity.html"><img src="Resources/assets/Fig2.png" width=100%  alt="Latitude vs. Humidity"></a>
+              <a href="Humidity.html"><img src="Resources/assets/Fig2.png" width=100% alt="Latitude vs. Humidity"></a>
             </div>
             <div class="w-100"></div>
             <div class="col-lg-6 col-md-3">
-              <a href="Cloudiness.html"><img src="Resources/assets/Fig3.png" width=100%  alt="Latitude vs. Cloudiness"></a>
+              <a href="Cloudiness.html"><img src="Resources/assets/Fig3.png" width=100% alt="Latitude vs. Cloudiness"></a>
             </div>
             <div class="col-lg-6 col-md-3">
-              <a href="Windspeed.html"><img src="Resources/assets/Fig4.png" width=100%  alt="Latitude vs. Wind Speed"></a>
+              <a href="Windspeed.html"><img src="Resources/assets/Fig4.png" width=100% alt="Latitude vs. Wind Speed"></a>
             </div>
           </div>
           </div>
