--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <div class="box">
           <h2>Summary: Latitude vs. X</h2>
           <hr>
-          <img src="Resources/assets/Fig1.png" alt="Latitude vs. Temperature" width=100% align="left" >
+          <div class="img-fluid">
+          <img src="Resources/assets/Fig1.png" class="float-left" alt="Latitude vs. Temperature" width=100% >
           <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
             accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
             cities.
@@ -62,6 +63,7 @@
             correlations witnesseed.
           </p>
           <hr>
+          </div>
         </div>
       </div>
     </div>
