--- a/Data.html
+++ b/Data.html
@@ -43,8 +43,7 @@
   </nav>
     <!-- Main body -->
   <div class="container">
-    <div class="row">
-    <div class = "col-12"> 
+    <div class="box">
 
       <h3 class="title">Data</h3>
       <hr>
@@ -7183,6 +7182,10 @@
                   </tr>
                 </tbody>
               </table>
+      </div>
+    </div>
+  </div>
+  
               <!-- Footer-->
     <br>
     <div>
