--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2>Summary: Latitude vs. X</h2>
           <hr>
           <div class="img-fluid">
-          <img src="Resources/assets/Fig1.png" class="float-left" alt="Latitude vs. Temperature" width=100% >
+          <img src="Resources/assets/Fig1.png" class="rounded float-left" alt="Latitude vs. Temperature" width=70%>
           <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
             accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500
             cities.
